--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
 "scripts": {
   "build": "tsc",
-  "start": "node dist/index.js",  // <- assumes your compiled file goes here
+  "start": "node dist/index.js",
   "test": "jest",
   "dev": "ts-node-dev --respawn src/index.ts"
 }
